--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Since 0.2.3:
+  - New: Functions as a module.
+  - New: Unit tests added.
+
 Version 0.2.3: 2016-09-17
 
   - New: Progress bar showing current entry processed and a percentage.
