--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
-Since 0.2.3:
+Version 0.2.4: 2017-08-25
   - New: Functions as a module.
   - New: Unit tests added.
+  - Changed: `happycowl` is now the name of the executable.
+  - Changed: Updated to latest changes in HappyCow.
+  - Fixed: Percentage shown correctly in Python 2.
 
 Version 0.2.3: 2016-09-17
 
